feat: sort the input winning numbers in ascending order